[metadata]
name = kegovin
summary = Web Application KEGO
description-file = README.md
author = kevin
author-email = kegol@qq.com
classifier =
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6

[global]
setup-hooks = 
    pbr.hooks.setup_hook

[files]
packages = 
    kegovin

[entry_points]
console_scripts =
